Thu Nov  2 16:28:01 EET 2000  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Changed client's channel table to SilcList and changed code 
	  accordingly.  Also changed SilcChannelClientEntry to include back-
	  pointer to the channel so that client entry can use that structure
	  as list as well and we have fast cross-reference to the channel.
	  This change dramatically decreased the complexity of channel
	  handling with client entry and vice versa (removed one extra
	  loop when searching for channel entry from many functions).

	* Changed server->sim from table to SilcDList and changed code
	  accordingly.

	* NAMES command can now be used from user interface.  It will show
	  the user list on the channel, neatly.

	* Added realname pointer to SilcClientEntry in lib/silcclient/idlist.h.
	  Code now saves realname of the user if it becomes available.

	* Renamed configure.in to configure.in.pre and made ./prepare
	  script to automatically add correct version string to
	  configure.in which it creates from configure.in.pre.

Wed Nov  1 17:21:26 EET 2000  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* NAMES command reply now shows users mode with the nickname when
	  joining to channel.

	* Moved silc_client_ch[u]mode[_char] functions from 
	  silc/clientutil.[ch] to lib/silcclient/client.[ch].  Though, that
	  place sucks, they are utility functions and should be in some
	  other file.

	* Fixed some unsigned int's to unsigned short's.  Patch by cras.

	* Fixed contrib/getopt*.[ch] to not require config.h.  Patch by
	  cras.

Tue Oct 31 20:10:37 EET 2000  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Updated README.

	* Added TRQ (efficient deque and list library) into lib/trq.  This is
	  a very good list library that is currently used in the SILC.  Defined
	  SilcList API over the library because I didn't like the API very
	  much.  See lib/trq/silclist.h for the API and examples of how to
	  use the API.  Fixed various places in the code to use the new